[package]
name = "vip_tracerouter"
version = "0.1.0"
edition = "2021"
authors = ["Finn-Thorben Sell <dev@finn-thorben.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
tokio = { version = "1.18", features = ["full"] }
tokio-tun = { git = "https://github.com/ftsell/tokio-tun.git", branch = "feature/ipv6_support" }
log = "0.4.14"
simplelog = "0.10.2"
systemd = { version = "0.9.0", optional = true }
clap = "2.33"
pnet_packet = "0.28.0"